madal corrections on small screens

--- a/app/assets/css/moduels/_modal.scss
+++ b/app/assets/css/moduels/_modal.scss
@@ -21,9 +21,13 @@
 
   &__container {
     position: absolute;
-    left: 50%;
+    left: 0;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
+    @mixin atMedium {
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
   &__close {
